--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -6,6 +6,9 @@
     <title>メニュー</title>
 </head>
 <body>
-    
+    <div th:replace="fragment::header"></div>
+    <h1> メニュー </h1>
+    <img src="/plan/img/Shop_Img1.jpeg">
+    <div th:replace="fragment::footer"></div>
 </body>
 </html>
