--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="jp" xmlsn:th="http://thymeleaf.org">
+<html lang="jp" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>フラグメントパーツ</title>
 </head>
+
 <body>
-    <div th:fragment="header" id="header">
-        <h3>サイト名</h3>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <form><input type="submit" value="ログアウト"></form>
+    <div th:fragment="header" id="header" style="position:fixed;width:100%;top:0;text-align:center;border-bottom:2px solid black;">
+        <h3>文具/雑貨販売システム</h3>
+        <div th:if="${#authorization.expression('isAuthenticated()')}">
+            <a href="#">商品情報メンテナンス</a>
+            <a href="#">商品カテゴリ登録</a>
+            <a href="#">アカウント登録</a>
+            <form><input type="submit" value="ログアウト"></form>
+        </div>
+        <div th:if="${not #authorization.expression('isAuthenticated()')}">
+            <a href="loginEmployee">ログイン</a>
+        </div>
     </div>
 
-    <div th:fragment="footer" id="footer">
-        XXX株式会社 All rights reserved.
+    <div th:fragment="footer" id="footer" style="position:fixed;width:100%;bottom:0;text-align:center;border-top:2px solid black;">
+        Fullness Stationary社
     </div>
 </body>
 </html>
