--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ログイン</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <h1>ログイン</h1>
-    <form th:action="@{/auth_employee}" method="post">
-        アカウント名<input type="text" name="username">
-        パスワード<input type="password" name="password">
-        <input type="submit" value="ログイン">
-    </form>
+    <div th:replace="fragment::header"></div>
+
+    <div>
+        <h1>ログイン</h1>
+        <form th:action="@{/auth_employee}" method="post">
+            アカウント名<input type="text" name="username"><br>
+            パスワード<input type="password" name="password">
+            <input type="submit" value="ログイン">
+        </form>
+    </div>
+    
+    <div th:replace="fragment::footer"></div>
 </body>
 </html>
