--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ログイン</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 
 </head>
 <body>
@@ -13,8 +13,16 @@
     <div>
         <h1>ログイン</h1>
         <form th:action="@{/auth_employee}" method="post">
-            アカウント名<input type="text" name="username"><br>
-            パスワード<input type="password" name="password">
+            <table  style="margin: 0 auto;">
+                <tr>
+                    <td style="text-align:right;">アカウント名</td>
+                    <td style="text-align:left;"><input type="text" name="username"></td>
+                </tr>
+                <tr>
+                    <td style="text-align:right;">パスワード</td>
+                    <td style="text-align:left;"><input type="password" name="password"></td>
+                </tr>
+            </table>
             <input type="submit" value="ログイン">
         </form>
     </div>
