--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,6 +23,7 @@
                     <td style="text-align:left;"><input type="password" name="password"></td>
                 </tr>
             </table>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <input type="submit" value="ログイン">
         </form>
     </div>
