--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +9,26 @@
 <body>
     <div th:replace="fragment::header"></div>
     <div>
-        <h1> 新商品登録（入力） </h1>
-        <form th:action="@{/registerProduct/confirm}" method="post" th:object="formProduct">
-            <table  style="margin: 0 auto;">
+        <h1>新商品登録（入力）</h1>
+        <form th:action="@{/registerProduct/confirm}" method="post" th:object="${productForm}" enctype="multipart/form-data">
+            <table style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:center;">商品名</td>
-                    <td style="text-align:left;"><input type="text" th:field="*{prodName}"></td>
+                    <td style="text-align:left;"><input type="text" th:field="*{productName}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">単価</td>
-                    <td style="text-align:left;"><input type="password" th:field="*{price}"></td>
+                    <td style="text-align:left;"><input type="text" th:field="*{price}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">在庫数</td>
-                    <td style="text-align:left;"><input type="password" th:field="*{prodName}"></td>
+                    <td style="text-align:left;"><input type="text" th:field="*{quantity}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">商品カテゴリ</td>
                     <td style="text-align:left;">
-                        <select>
-                            <option th:each="${category:categoryList}" th:value="${category.productCategoryId}" th:text="${category.productCategoryName}" th:field="*{categoryId}"> 
+                        <select th:field="*{categoryId}">
+                            <option th:each="category : ${categoryList}" th:value="${category.productCategoryId}">[[${category.productCategoryName}]]</option>
                         </select>
                     </td>
                 </tr>
@@ -38,7 +38,7 @@
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <input type="submit" value="ログイン">
+            <input type="submit" value="確認">
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
