--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -33,9 +33,11 @@
             </tr>
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-        <a href="/menu">キャンセル</a>
-        <a href="/registerProduct/input">戻る
-        <input type="submit" value="確認">
+        <form th:action="@{/registerProduct/complete}">
+            <a href="/menu">キャンセル</a>
+            <a href="/registerProduct/input">戻る
+            <input type="submit" value="確認">
+        </form>
     </div>
     <div th:replace="fragment::footer"></div>
 </body>
