--- a/src/main/resources/templates/product/register/complete.html
+++ b/src/main/resources/templates/product/register/complete.html
@@ -10,7 +10,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>新商品登録（完了）</h1>
-        ${productName}を登録しました。
+        <div th:inline="text">[[${productName}]]を登録しました。</div>
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
@@ -19,12 +19,12 @@
                     </form>
                 </td>
                 <td style="text-align:center;">
-                    <form th:action="@{/productList}" method="post">
+                    <form th:action="@{/productlist}" method="get">
                         <input type="submit" value="商品検索へ戻る">
                     </form>
                 </td>
                 <td style="text-align:center;">
-                    <form th:action="@{input}" method="post">
+                    <form th:action="@{input}" method="get">
                         <input type="submit" value="入力に戻る">
                     </form>
                 </td>
