--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <td style="text-align:center;">商品カテゴリ</td>
-                <td style="text-align:left;"  th:text="${productCategoryName}"></td>
+                <td style="text-align:left;"  th:text="${productCategory.productCategoryName}"></td>
             </tr>
             <tr>
                 <td style="text-align:center;">画像</td>
