--- a/src/main/resources/templates/product/productlist.html
+++ b/src/main/resources/templates/product/productlist.html
@@ -27,7 +27,7 @@
             </form>
           </tr>
           </table>
-            <table border="1">
+            <table border="1" style="margin: 0 auto;">
                 <tr>
                   <th>商品画像</th>
                   <th>商品名</th>
@@ -35,9 +35,9 @@
                   <th>修正</th>
                   <th>削除</th>
                 </tr>
-                <tr th:each="p : ${productList}">
-                  <td th:text="${p.imageUrl}"></td>
-                  <td th:text="${p.name}"></td>
+                <tr th:each="p : ${products}">
+                  <td><img th:src="@{/img/__${p.imageUrl}__}" width="100"></td>
+                  <td th:text="${p.productName}"></td>
                   <td th:text="${#numbers.formatInteger(p.price, 3, 'COMMA')} + '円'"></td>
                   <td>
                     <form
@@ -60,33 +60,33 @@
               </table>
               <ul class="pagination">
                 <!-- 最初のページの場合はリンクを非活性化にし2ページ目以降はリンクを有効にする -->
-                <li th:class="${items.first} ? 'disabled':''" style="display: inline">
-                  <span th:if="${items.first}">最初</span>
-                  <a th:if="${not items.first}" th:href="@{__${pageUrl}__page=0}">最初</a>
+                <li th:class="${products.first} ? 'disabled':''" style="display: inline">
+                  <span th:if="${products.first}">最初</span>
+                  <a th:if="${not products.first}" th:href="@{__${pageUrl}__page=0}">最初</a>
                 </li>
                 <!-- 最初のページの場合はリンクを非活性化にし2ページ目以降はリンクを有効にする -->
-                <li th:class="${items.first} ? 'disabled':''" style="display: inline">
-                  <span th:if="${items.first}">前へ</span>
-                  <a th:if="${not items.first}" th:href="@{__${pageUrl}__page=__${prev}__}">前へ</a>
+                <li th:class="${products.first} ? 'disabled':''" style="display: inline">
+                  <span th:if="${products.first}">前へ</span>
+                  <a th:if="${not products.first}" th:href="@{__${pageUrl}__page=__${prev}__}">前へ</a>
                 </li>
                 <!-- ページ毎のリンクを表示 現在のページの場合はリンクを非活性化にし現在のページ以外はリンクを有効にする-->
                 <li 
-                  th:each="i : ${#numbers.sequence(0, items.totalPages-1)}"
-                  th:class="(${i}==${items.number})? 'active' : ''"
+                  th:each="i : ${#numbers.sequence(0, products.totalPages-1)}"
+                  th:class="(${i}==${products.number})? 'active' : ''"
                   style="display: inline">
-                  <span th:if="${i}==${items.number}" th:text="${i+1}">1</span>
-                  <a th:if="${i}!=${items.number}" th:href="@{__${pageUrl}__page=__${i+1}__}">
+                  <span th:if="${i}==${products.number}" th:text="${i+1}">1</span>
+                  <a th:if="${i}!=${products.number}" th:href="@{__${pageUrl}__page=__${i+1}__}">
                   <span th:text="${i+1}">1</span></a>
                 </li>
                 <!-- 最後のページの場合はリンクを非活性化にし最後のページ目以外はリンクを有効にする -->
-                <li th:class="${items.last} ? 'disabled':''" style="display: inline">
-                  <span th:if="${items.last}">次へ</span>
-                  <a th:if="${not items.last}" th:href="@{__${pageUrl}__page=__${next}__}">次へ</a>
+                <li th:class="${products.last} ? 'disabled':''" style="display: inline">
+                  <span th:if="${products.last}">次へ</span>
+                  <a th:if="${not products.last}" th:href="@{__${pageUrl}__page=__${next}__}">次へ</a>
                 </li>
                 <!-- 最後のページの場合はリンクを非活性化にし最後のページ目以外はリンクを有効にする -->
-                <li th:class="${items.last} ? 'disabled':''" style="display: inline">
-                <span th:if="${items.last}">最後</span>
-                <a th:if="${not items.last}" th:href="@{__${pageUrl}__page=__${items.totalPages}__}">最後</a>
+                <li th:class="${products.last} ? 'disabled':''" style="display: inline">
+                <span th:if="${products.last}">最後</span>
+                <a th:if="${not products.last}" th:href="@{__${pageUrl}__page=__${products.totalPages}__}">最後</a>
                 </li>
               </ul>
     </div>
