--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-        <form th:action="@{/registerProduct/complete}">
+        <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
             <a href="/registerProduct/input">戻る
             <input type="submit" value="確認">
