--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -35,7 +35,7 @@
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
-            <a href="/registerProduct/input">戻る
+            <a href="/registerproduct/input">戻る
             <input type="submit" value="確認">
         </form>
     </div>
