--- a/src/main/resources/templates/product/update/complete.html
+++ b/src/main/resources/templates/product/update/complete.html
@@ -9,13 +9,24 @@
 </head>
 <body>
     <div th:replace="fragment::header"></div>
-
     <div>
-        <h1>商品修正(完了)</h1>
-      
-        </form>
+        <h1>商品修正（完了）</h1>
+        <div th:inline="text">[[${productName}]]を修正しました。</div>
+        <table style="margin: 0 auto;">
+            <tr>
+                <td style="text-align:center;">
+                    <form th:action="@{/logoutEmployee}" method="post">
+                        <input type="submit" value="業務終了">
+                    </form>
+                </td>
+                <td style="text-align:center;">
+                    <form th:action="@{/productlist}" method="get">
+                        <input type="submit" value="商品検索へ戻る">
+                    </form>
+                </td>
+            </tr>
+        </table>
     </div>
-    
-    <div th:replace="fragment::footer"></div>
+        <div th:replace="fragment::footer"></div>
 </body>
 </html>
