--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -9,13 +9,35 @@
 </head>
 <body>
     <div th:replace="fragment::header"></div>
-
     <div>
-        <h1>商品修正(確認)</h1>
-      
-        </form>
-    </div>
-    
-    <div th:replace="fragment::footer"></div>
+        <h1>商品修正（確認）</h1>
+            <table style="margin: 0 auto;">
+                <tr>
+                    <td style="text-align:center;">商品名</td>
+                    <td style="text-align:left;" th:field="*{productForm.productName}"></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;">単価</td>
+                    <td style="text-align:left;" th:field="*{productForm.price}"></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;">在庫数</td>
+                    <td style="text-align:left;" th:field="*{productForm.quantity}"></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;">商品カテゴリ</td>
+                    <td style="text-align:left;" th:field="*{productForm.categoryId}"></td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;">画像</td>
+                    <td style="text-align:left;"><img th:src="${productForm.file}" width="500"></td>>
+                </tr>
+            </table>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <form th:action="@{execute}" method="post">
+            <a href="/menu">キャンセル</a>
+            <a href="/updateproduct/input">戻る</a>
+            <input type="submit" value="完了">
+            </form>
 </body>
 </html>
