--- a/src/main/resources/templates/account/register/confirm.html
+++ b/src/main/resources/templates/account/register/confirm.html
@@ -17,11 +17,11 @@
             </tr>
             <tr>
                 <td style="text-align:center;">アカウント名</td>
-                <td style="text-align:left;" th:text="${employeeForm.employeeName}"></td>
+                <td style="text-align:left;" th:text="${employeeForm.empName}"></td>
             </tr>
             <tr>
                 <td style="text-align:center;">パスワード</td>
-                <td style="text-align:left;" th:text="${employeeForm.password}"></td>
+                <td style="text-align:left;" th:text="${employeeForm.empAccountPassword}"></td>
             </tr>
           
         </table>
