--- a/src/main/resources/templates/account/register/confirm.html
+++ b/src/main/resources/templates/account/register/confirm.html
@@ -12,12 +12,12 @@
         <h1>アカウント登録（確認）</h1>
         <table style="margin: 0 auto;">
             <tr>
-                <td style="text-align:center;">商品カテゴリ</td>
+                <td style="text-align:center;">社員名</td>
                 <td style="text-align:left;"  th:text="${employee.empName}"></td>
             </tr>
             <tr>
                 <td style="text-align:center;">アカウント名</td>
-                <td style="text-align:left;" th:text="${employeeForm.empName}"></td>
+                <td style="text-align:left;" th:text="${employeeForm.empAccountName}"></td>
             </tr>
             <tr>
                 <td style="text-align:center;">パスワード</td>
