--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -22,7 +22,7 @@
                 </tr>
                 <tr>
                     <td style="text-align:center;">アカウント名</td>
-                    <td style="text-align:left;"><input type="text" th:field="*{empName}"></td>
+                    <td style="text-align:left;"><input type="text" th:field="*{empAccountName}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">パスワード</td>
