商品修正　途中

--- a/src/main/resources/templates/product/update/complete.html
+++ b/src/main/resources/templates/product/update/complete.html
@@ -11,7 +11,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品修正（完了）</h1>
-        <div th:inline="text">[[${productName}]]を修正しました。</div>
+        <div th:inline="text">[[${name}]]を修正しました。</div>
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
