--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -11,27 +11,34 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品修正（確認）</h1>
-            <table style="margin: 0 auto;">
+            <table style="margin: 0 auto;" th:object="${product}">
                 <tr>
                     <td style="text-align:center;">商品名</td>
-                    <td style="text-align:left;" th:field="*{productForm.productName}"></td>
+                    <td style="text-align:left;" th:text="*{productName}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">単価</td>
-                    <td style="text-align:left;" th:field="*{productForm.price}"></td>
+                    <td style="text-align:left;" th:text="*{price}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">在庫数</td>
-                    <td style="text-align:left;" th:field="*{productForm.quantity}"></td>
+                    <td style="text-align:left;" th:text="*{productStock.quantity}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">商品カテゴリ</td>
-                    <td style="text-align:left;" th:field="*{productForm.categoryId}"></td>
+                    <td style="text-align:left;" th:text="*{productCategory.productCategoryName}"></td>
                 </tr>
+
                 <tr>
                     <td style="text-align:center;">画像</td>
-                    <td style="text-align:left;"><img th:src="${productForm.file}" width="500"></td>>
+                    <td th:if="${image!=null}">
+                        <img th:src="@{/img/__${image}__}" width="500">
+                    </td>
+                    <td th:if="${image==null}">
+                        <img th:src="@{/img/__${product.imageUrl}__}" width="500">
+                    </td>
                 </tr>
+
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <form th:action="@{execute}" method="post">
