--- a/src/main/resources/templates/product/update/input.html
+++ b/src/main/resources/templates/product/update/input.html
@@ -10,7 +10,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品修正（入力）</h1>
-        <form th:action="@{/registerproduct/confirm}" method="post" th:object="${product}" enctype="multipart/form-data">
+        <form th:action="@{/updateproduct/confirm}" method="post" th:object="${product}" enctype="multipart/form-data">
             <table style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:center;">商品名</td>
@@ -24,14 +24,20 @@
                     <td style="text-align:center;">在庫数</td>
                     <td style="text-align:left;"><input type="text" th:field="*{productStock.quantity}"></td>
                 </tr>
+
                 <tr>
                     <td style="text-align:center;">商品カテゴリ</td>
                     <td style="text-align:left;">
                         <select th:field="*{productCategory.productCategoryId}">
-                            <option th:each="category : ${categoryList}" th:value="${category.productCategoryId}" th:selected="${category.productCategoryId==productCategory.productCategoryId}">[[${category.productCategoryName}]]</option>
+                            <option th:each="category : ${categoryList}"
+                                    th:value="${category.productCategoryId}"
+                                    th:selected="${category.productCategoryId == product.productCategory.productCategoryId}">
+                                [[${category.productCategoryName}]]
+                            </option>
                         </select>
                     </td>
                 </tr>
+    
                 <tr>
                     <td></td>
                     <td style="text-align:left;"><input type="file" name="file" th:value="${file}" accept=".jpg, .jpeg, .png"></td>
@@ -43,7 +49,7 @@
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <a href="/menu">キャンセル</a>
-            <input type="submit" value="完了">
+            <input type="submit" value="確認">
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
