--- a/src/main/resources/templates/account/register/confirm.html
+++ b/src/main/resources/templates/account/register/confirm.html
@@ -21,7 +21,8 @@
             </tr>
             <tr>
                 <td style="text-align:center;">パスワード</td>
-                <td style="text-align:left;" th:text="${employeeForm.empAccountPassword}"></td>
+                <!-- <td style="text-align:left;" th:text="${employeeForm.empAccountPassword}"></td> -->
+                <td th:text="${'*'.repeat(employeeForm.empAccountPassword.length())}"></td>
             </tr>
           
         </table>
