--- a/src/main/resources/templates/product/categoryregister/input.html
+++ b/src/main/resources/templates/product/categoryregister/input.html
@@ -20,6 +20,8 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <input type="submit" value="確認">
         </form>
+        <div th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></div>
+
     </div>
     <div th:replace="fragment::footer"></div>
 </body>
