--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -14,6 +14,7 @@
             <form th:action="@{'/logoutEmployee'}" method="post">
                 <a href="#">商品情報メンテナンス</a>
                 <a href="#">商品カテゴリ登録</a>
+                <a href="#">購入履歴検索</a>
                 <a href="#">アカウント登録</a>
                 <input type="submit" value="ログアウト">
             </form>
