--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -4,25 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新商品登録（入力）</title>
+
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
     <div th:replace="fragment::header"></div>
     <div>
         <h1>新商品登録（入力）</h1>
+        
         <form th:action="@{/registerproduct/confirm}" method="post" th:object="${productForm}" enctype="multipart/form-data">
             <table style="margin: 0 auto;">
+                
                 <tr>
                     <td style="text-align:center;">商品名</td>
                     <td style="text-align:left;"><input type="text" th:field="*{productName}"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></span>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">単価</td>
                     <td style="text-align:left;"><input type="text" th:field="*{price}"></td>
                 </tr>
                 <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
+                    </td>
+                </tr>
+                <tr>
                     <td style="text-align:center;">在庫数</td>
                     <td style="text-align:left;"><input type="text" th:field="*{quantity}"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"></span>
+                    </td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">商品カテゴリ</td>
@@ -39,6 +57,12 @@
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <input type="submit" value="確認">
+            <div class="error">
+                <ul th:if="${#fields.hasErrors('global')}">
+                    <li th:each="error : ${#fields.errors('global')}" th:text="${error}">
+                    </li>
+                </ul>
+            </div>
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
