ログイン、メニュー、カテゴリー登録の見た目だけのテストした

--- a/src/main/resources/templates/product/categoryregister/complete.html
+++ b/src/main/resources/templates/product/categoryregister/complete.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品カテゴリ登録（完了）</title>
+    <title>商品カテゴリ登録（完了）画面</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -18,11 +18,7 @@
                         <input type="submit" value="業務終了">
                     </form>
                 </td>
-                <td style="text-align:center;">
-                    <form th:action="@{/productlist}" method="get">
-                        <input type="submit" value="商品検索へ戻る">
-                    </form>
-                </td>
+
                 <td style="text-align:center;">
                     <form th:action="@{input}" method="get">
                         <input type="submit" value="入力に戻る">
