--- a/src/main/resources/templates/product/categoryregister/input.html
+++ b/src/main/resources/templates/product/categoryregister/input.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商品カテゴリ登録（入力）</title>
+    <title>商品カテゴリ登録（入力）画面</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -18,6 +18,7 @@
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <a href="/menu">キャンセル</a>
             <input type="submit" value="確認">
         </form>
         <div th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></div>
