担当者アカウント登録バリデーション以外完成

--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -11,6 +11,7 @@
     <div>
         <h1>担当者アカウント登録（入力）</h1>
         <div th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></div>
+        <div th:if="${errorMessage1}" th:text="${errorMessage1}" style="color:red;"></div>
         <form th:action="@{/registeraccount/confirm}" method="post" th:object="${employeeForm}">
             <table style="margin: 0 auto;">
                 <tr>
