--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -56,6 +56,7 @@
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <a href="/menu">キャンセル</a>
             <input type="submit" value="確認">
             <div class="error">
                 <ul th:if="${#fields.hasErrors('global')}">
