--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -43,7 +43,7 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
-            <a href="/updateproduct/input">戻る</a>
+            <a th:href="@{/updateproduct/input?productId=__${product.productId}__}">戻る</a>
             <input type="submit" value="完了">
             </form>
 </body>
