--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -11,7 +11,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品修正（確認）</h1>
-            <table style="margin: 0 auto;" th:object="${product}">
+            <table style="margin: 0 auto;" th:object="${productForm}">
                 <tr>
                     <td style="text-align:center;">商品名</td>
                     <td style="text-align:left;" th:text="*{productName}"></td>
@@ -22,11 +22,11 @@
                 </tr>
                 <tr>
                     <td style="text-align:center;">在庫数</td>
-                    <td style="text-align:left;" th:text="*{productStock.quantity}"></td>
+                    <td style="text-align:left;" th:text="*{quantity}"></td>
                 </tr>
                 <tr>
                     <td style="text-align:center;">商品カテゴリ</td>
-                    <td style="text-align:left;" th:text="*{productCategory.productCategoryName}"></td>
+                    <td style="text-align:left;" th:text="*{categoryName}"></td>
                 </tr>
 
                 <tr>
@@ -35,7 +35,7 @@
                         <img th:src="${image}">
                     </td>
                     <td th:if="${image==null}">
-                        <img th:src="@{/img/__${product.imageUrl}__}">
+                        <img th:src="@{/img/__${productForm.imageUrl}__}">
                     </td>
                 </tr>
 
@@ -43,7 +43,7 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
-            <a th:href="@{/updateproduct/input?productId=__${product.productId}__}">戻る</a>
+            <a th:href="@{/updateproduct/input?productId=__${productForm.productId}__}">戻る</a>
             <input type="submit" value="完了">
             </form>
 </body>
