--- a/src/main/resources/templates/product/categoryregister/input.html
+++ b/src/main/resources/templates/product/categoryregister/input.html
@@ -11,10 +11,19 @@
     <div>
         <h1>商品カテゴリ登録（入力）</h1>
         <form th:action="@{/registerproductcategory/confirm}" method="post" th:object="${categoryForm}">
+                <div class="error">
+                    <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
+                    </p>
+            </div>
             <table style="margin: 0 auto;">
                 <tr>
                     <td style="text-align:center;">商品カテゴリ名</td>
                     <td style="text-align:left;"><input type="text" th:field="*{productCategoryName}"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="error" th:if="${#fields.hasErrors('productCategoryName')}" th:errors="*{productCategoryName}"></span>
+                    </td>
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
