--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新商品登録（入力）</title>
+    <title>新商品登録（入力）画面</title>
 
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
