確認、完了ボタンの修正

--- a/src/main/resources/templates/account/register/confirm.html
+++ b/src/main/resources/templates/account/register/confirm.html
@@ -30,7 +30,7 @@
         <form th:action="@{execute}" method="post">
             <a href="/menu">キャンセル</a>
             <a href="/registeraccount/input">戻る
-            <input type="submit" value="確認">
+            <input type="submit" value="完了">
         </form>
     </div>
     <div th:replace="fragment::footer"></div>
