--- a/src/main/resources/templates/product/delete/confirm.html
+++ b/src/main/resources/templates/product/delete/confirm.html
@@ -34,7 +34,7 @@
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
-            <a href="/menu">キャンセル</a>
+            <a href="/productlist">キャンセル</a>
             <input type="submit" value="完了">
         </form>
     </div>
