不正な操作取り消し

--- a/src/main/resources/templates/product/categoryregister/confirm.html
+++ b/src/main/resources/templates/product/categoryregister/confirm.html
@@ -10,9 +10,9 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品カテゴリ登録（確認）</h1>
-        <div th:if="${error}" style="color: red; text-align: center;">
+        <!-- <div th:if="${error}" style="color: red; text-align: center;">
             <p th:text="${error}"></p>
-        </div>
+        </div> -->
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">商品カテゴリ名</td>
