商品登録機能　キャンセルリンク押下したとき検索画面に遷移させるように変更

--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -60,7 +60,7 @@
             </table>
             
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <a href="/menu">キャンセル</a>
+            <a href="/productlist">キャンセル</a>
             <input type="submit" value="確認">
             
         </form>
