--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -38,7 +38,7 @@
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
             <a href="/productlist">キャンセル</a>
-            <a href="/registerproduct/input">戻る
+            <a href="javascript:history.back()">戻る</a>
             <input type="submit" value="完了">
         </form>
     </div>
